Mofidy routes for retrieve single match
